# logos-package-downloader-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
.github/workflows/: doctests.yml
docs/: project.md  spec.md
doctests/: package-downloader-module-runtime.test.yaml  run.sh
doctests/outputs/: package-downloader-module-runtime.md
nix/: default.nix  include.nix  lib.nix
pr-8/: index.html
pr-8/macos-latest/: index.html
pr-8/ubuntu-latest/: index.html
src/: package_downloader_impl.cpp  package_downloader_impl.h  package_downloader_interface.h  package_downloader_plugin.cpp  package_downloader_plugin.h
tests/: CMakeLists.txt  package_downloader_events_test.cpp  test_package_downloader.cpp
tests/mocks/: mock_package_downloader_lib.cpp
tests/stubs/: package_downloader_lib.h
